pyinstaller-2.0 for windows/swim/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Unused terminals:

    RETURN

Grammar

Rule 0     S' -> start
Rule 1     start -> statements
Rule 2     statements -> statement statements
Rule 3     statements -> statement
Rule 4     statement -> simple_stmt
Rule 5     statement -> compound_stmt
Rule 6     simple_stmt -> expression_stmt
Rule 7     simple_stmt -> assign_stmt
Rule 8     simple_stmt -> increment_stmt
Rule 9     simple_stmt -> decrement_stmt
Rule 10    simple_stmt -> list_stmt
Rule 11    simple_stmt -> dictionary_stmt
Rule 12    compound_stmt -> if_stmt
Rule 13    compound_stmt -> while_stmt
Rule 14    compound_stmt -> for_stmt
Rule 15    compound_stmt -> function_stmt
Rule 16    expression_stmt -> expression
Rule 17    assign_stmt -> ID ASSIGN expression SEMICOLON
Rule 18    increment_stmt -> expression PLUS PLUS SEMICOLON
Rule 19    decrement_stmt -> expression MINUS MINUS SEMICOLON
Rule 20    list_stmt -> ID ASSIGN LSBRACKET elements RSBRACKET SEMICOLON
Rule 21    elements -> element COMMA elements
Rule 22    elements -> element
Rule 23    element -> expression
Rule 24    dictionary_stmt -> ID ASSIGN LCBRACKET dictionary_objects RCBRACKET SEMICOLON
Rule 25    dictionary_objects -> dictionary_object COMMA dictionary_objects
Rule 26    dictionary_objects -> dictionary_object
Rule 27    dictionary_object -> key COLON value
Rule 28    key -> STRING1
Rule 29    key -> STRING2
Rule 30    value -> expression
Rule 31    if_stmt -> IF expression DO statements elif_blocks END
Rule 32    elif_blocks -> elif_block elif_blocks
Rule 33    elif_blocks -> else_block
Rule 34    elif_blocks -> <empty>
Rule 35    elif_block -> ELIF expression DO statements
Rule 36    else_block -> ELSE statements
Rule 37    while_stmt -> WHILE expression DO statements END
Rule 38    for_stmt -> FOR EACH ID IN element DO statements END
Rule 39    function_stmt -> ID LPAREN statement RPAREN SEMICOLON
Rule 40    expression -> unary_expr
Rule 41    expression -> binary_expr
Rule 42    unary_expr -> boolean_expr
Rule 43    unary_expr -> not_expr
Rule 44    unary_expr -> number_expr
Rule 45    unary_expr -> id_expr
Rule 46    unary_expr -> string_expr
Rule 47    unary_expr -> list_expr
Rule 48    unary_expr -> parse_text_expr
Rule 49    unary_expr -> group_expr
Rule 50    unary_expr -> uplus_expr
Rule 51    unary_expr -> uminus_expr
Rule 52    binary_expr -> arithmetic_expr
Rule 53    binary_expr -> conditional_expr
Rule 54    boolean_expr -> TRUE
Rule 55    boolean_expr -> FALSE
Rule 56    not_expr -> NOT expression
Rule 57    number_expr -> NUMBER
Rule 58    id_expr -> ID
Rule 59    string_expr -> STRING1
Rule 60    string_expr -> STRING2
Rule 61    list_expr -> LSBRACKET elements RSBRACKET
Rule 62    parse_text_expr -> SELECTOR LPAREN elements RPAREN
Rule 63    group_expr -> LPAREN expression RPAREN
Rule 64    uplus_expr -> PLUS expression
Rule 65    uminus_expr -> MINUS expression
Rule 66    arithmetic_expr -> expression PLUS expression
Rule 67    arithmetic_expr -> expression MINUS expression
Rule 68    arithmetic_expr -> expression MULTIPLY expression
Rule 69    arithmetic_expr -> expression DIVIDE expression
Rule 70    arithmetic_expr -> expression POW expression
Rule 71    arithmetic_expr -> expression MOD expression
Rule 72    conditional_expr -> expression AND expression
Rule 73    conditional_expr -> expression OR expression
Rule 74    conditional_expr -> expression XOR expression
Rule 75    conditional_expr -> expression EQUALS expression
Rule 76    conditional_expr -> expression NOT_EQUALS expression
Rule 77    conditional_expr -> expression GREATER_THAN expression
Rule 78    conditional_expr -> expression LESS_THAN expression
Rule 79    conditional_expr -> expression GREATER_THAN_OR_EQUAL expression
Rule 80    conditional_expr -> expression LESS_THAN_OR_EQUAL expression

Terminals, with rules where they appear

AND                  : 72
ASSIGN               : 17 20 24
COLON                : 27
COMMA                : 21 25
DIVIDE               : 69
DO                   : 31 35 37 38
EACH                 : 38
ELIF                 : 35
ELSE                 : 36
END                  : 31 37 38
EQUALS               : 75
FALSE                : 55
FOR                  : 38
GREATER_THAN         : 77
GREATER_THAN_OR_EQUAL : 79
ID                   : 17 20 24 38 39 58
IF                   : 31
IN                   : 38
LCBRACKET            : 24
LESS_THAN            : 78
LESS_THAN_OR_EQUAL   : 80
LPAREN               : 39 62 63
LSBRACKET            : 20 61
MINUS                : 19 19 65 67
MOD                  : 71
MULTIPLY             : 68
NOT                  : 56
NOT_EQUALS           : 76
NUMBER               : 57
OR                   : 73
PLUS                 : 18 18 64 66
POW                  : 70
RCBRACKET            : 24
RETURN               : 
RPAREN               : 39 62 63
RSBRACKET            : 20 61
SELECTOR             : 62
SEMICOLON            : 17 18 19 20 24 39
STRING1              : 28 59
STRING2              : 29 60
TRUE                 : 54
WHILE                : 37
XOR                  : 74
error                : 

Nonterminals, with rules where they appear

arithmetic_expr      : 52
assign_stmt          : 7
binary_expr          : 41
boolean_expr         : 42
compound_stmt        : 5
conditional_expr     : 53
decrement_stmt       : 9
dictionary_object    : 25 26
dictionary_objects   : 24 25
dictionary_stmt      : 11
element              : 21 22 38
elements             : 20 21 61 62
elif_block           : 32
elif_blocks          : 31 32
else_block           : 33
expression           : 16 17 18 19 23 30 31 35 37 56 63 64 65 66 66 67 67 68 68 69 69 70 70 71 71 72 72 73 73 74 74 75 75 76 76 77 77 78 78 79 79 80 80
expression_stmt      : 6
for_stmt             : 14
function_stmt        : 15
group_expr           : 49
id_expr              : 45
if_stmt              : 12
increment_stmt       : 8
key                  : 27
list_expr            : 47
list_stmt            : 10
not_expr             : 43
number_expr          : 44
parse_text_expr      : 48
simple_stmt          : 4
start                : 0
statement            : 2 3 39
statements           : 1 2 31 35 36 37 38
string_expr          : 46
uminus_expr          : 51
unary_expr           : 40
uplus_expr           : 50
value                : 27
while_stmt           : 13

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . statements
    (2) statements -> . statement statements
    (3) statements -> . statement
    (4) statement -> . simple_stmt
    (5) statement -> . compound_stmt
    (6) simple_stmt -> . expression_stmt
    (7) simple_stmt -> . assign_stmt
    (8) simple_stmt -> . increment_stmt
    (9) simple_stmt -> . decrement_stmt
    (10) simple_stmt -> . list_stmt
    (11) simple_stmt -> . dictionary_stmt
    (12) compound_stmt -> . if_stmt
    (13) compound_stmt -> . while_stmt
    (14) compound_stmt -> . for_stmt
    (15) compound_stmt -> . function_stmt
    (16) expression_stmt -> . expression
    (17) assign_stmt -> . ID ASSIGN expression SEMICOLON
    (18) increment_stmt -> . expression PLUS PLUS SEMICOLON
    (19) decrement_stmt -> . expression MINUS MINUS SEMICOLON
    (20) list_stmt -> . ID ASSIGN LSBRACKET elements RSBRACKET SEMICOLON
    (24) dictionary_stmt -> . ID ASSIGN LCBRACKET dictionary_objects RCBRACKET SEMICOLON
    (31) if_stmt -> . IF expression DO statements elif_blocks END
    (37) while_stmt -> . WHILE expression DO statements END
    (38) for_stmt -> . FOR EACH ID IN element DO statements END
    (39) function_stmt -> . ID LPAREN statement RPAREN SEMICOLON
    (40) expression -> . unary_expr
    (41) expression -> . binary_expr
    (42) unary_expr -> . boolean_expr
    (43) unary_expr -> . not_expr
    (44) unary_expr -> . number_expr
    (45) unary_expr -> . id_expr
    (46) unary_expr -> . string_expr
    (47) unary_expr -> . list_expr
    (48) unary_expr -> . parse_text_expr
    (49) unary_expr -> . group_expr
    (50) unary_expr -> . uplus_expr
    (51) unary_expr -> . uminus_expr
    (52) binary_expr -> . arithmetic_expr
    (53) binary_expr -> . conditional_expr
    (54) boolean_expr -> . TRUE
    (55) boolean_expr -> . FALSE
    (56) not_expr -> . NOT expression
    (57) number_expr -> . NUMBER
    (58) id_expr -> . ID
    (59) string_expr -> . STRING1
    (60) string_expr -> . STRING2
    (61) list_expr -> . LSBRACKET elements RSBRACKET
    (62) parse_text_expr -> . SELECTOR LPAREN elements RPAREN
    (63) group_expr -> . LPAREN expression RPAREN
    (64) uplus_expr -> . PLUS expression
    (65) uminus_expr -> . MINUS expression
    (66) arithmetic_expr -> . expression PLUS expression
    (67) arithmetic_expr -> . expression MINUS expression
    (68) arithmetic_expr -> . expression MULTIPLY expression
    (69) arithmetic_expr -> . expression DIVIDE expression
    (70) arithmetic_expr -> . expression POW expression
    (71) arithmetic_expr -> . expression MOD expression
    (72) conditional_expr -> . expression AND expression
    (73) conditional_expr -> . expression OR expression
    (74) conditional_expr -> . expression XOR expression
    (75) conditional_expr -> . expression EQUALS expression
    (76) conditional_expr -> . expression NOT_EQUALS expression
    (77) conditional_expr -> . expression GREATER_THAN expression
    (78) conditional_expr -> . expression LESS_THAN expression
    (79) conditional_expr -> . expression GREATER_THAN_OR_EQUAL expression
    (80) conditional_expr -> . expression LESS_THAN_OR_EQUAL expression

    ID              shift and go to state 32
    IF              shift and go to state 33
    WHILE           shift and go to state 10
    FOR             shift and go to state 26
    TRUE            shift and go to state 12
    FALSE           shift and go to state 35
    NOT             shift and go to state 42
    NUMBER          shift and go to state 7
    STRING1         shift and go to state 23
    STRING2         shift and go to state 22
    LSBRACKET       shift and go to state 4
    SELECTOR        shift and go to state 8
    LPAREN          shift and go to state 30
    PLUS            shift and go to state 21
    MINUS           shift and go to state 13

    list_expr                      shift and go to state 1
    statements                     shift and go to state 2
    unary_expr                     shift and go to state 3
    dictionary_stmt                shift and go to state 5
    group_expr                     shift and go to state 24
    parse_text_expr                shift and go to state 11
    list_stmt                      shift and go to state 14
    number_expr                    shift and go to state 31
    string_expr                    shift and go to state 15
    arithmetic_expr                shift and go to state 16
    assign_stmt                    shift and go to state 17
    start                          shift and go to state 18
    expression_stmt                shift and go to state 19
    statement                      shift and go to state 20
    compound_stmt                  shift and go to state 40
    function_stmt                  shift and go to state 25
    simple_stmt                    shift and go to state 27
    conditional_expr               shift and go to state 28
    for_stmt                       shift and go to state 29
    not_expr                       shift and go to state 6
    binary_expr                    shift and go to state 9
    decrement_stmt                 shift and go to state 34
    if_stmt                        shift and go to state 36
    uminus_expr                    shift and go to state 37
    id_expr                        shift and go to state 38
    boolean_expr                   shift and go to state 39
    while_stmt                     shift and go to state 41
    uplus_expr                     shift and go to state 43
    expression                     shift and go to state 44
    increment_stmt                 shift and go to state 45

state 1

    (47) unary_expr -> list_expr .

    PLUS            reduce using rule 47 (unary_expr -> list_expr .)
    MINUS           reduce using rule 47 (unary_expr -> list_expr .)
    MULTIPLY        reduce using rule 47 (unary_expr -> list_expr .)
    DIVIDE          reduce using rule 47 (unary_expr -> list_expr .)
    POW             reduce using rule 47 (unary_expr -> list_expr .)
    MOD             reduce using rule 47 (unary_expr -> list_expr .)
    AND             reduce using rule 47 (unary_expr -> list_expr .)
    OR              reduce using rule 47 (unary_expr -> list_expr .)
    XOR             reduce using rule 47 (unary_expr -> list_expr .)
    EQUALS          reduce using rule 47 (unary_expr -> list_expr .)
    NOT_EQUALS      reduce using rule 47 (unary_expr -> list_expr .)
    GREATER_THAN    reduce using rule 47 (unary_expr -> list_expr .)
    LESS_THAN       reduce using rule 47 (unary_expr -> list_expr .)
    GREATER_THAN_OR_EQUAL reduce using rule 47 (unary_expr -> list_expr .)
    LESS_THAN_OR_EQUAL reduce using rule 47 (unary_expr -> list_expr .)
    ID              reduce using rule 47 (unary_expr -> list_expr .)
    IF              reduce using rule 47 (unary_expr -> list_expr .)
    WHILE           reduce using rule 47 (unary_expr -> list_expr .)
    FOR             reduce using rule 47 (unary_expr -> list_expr .)
    TRUE            reduce using rule 47 (unary_expr -> list_expr .)
    FALSE           reduce using rule 47 (unary_expr -> list_expr .)
    NOT             reduce using rule 47 (unary_expr -> list_expr .)
    NUMBER          reduce using rule 47 (unary_expr -> list_expr .)
    STRING1         reduce using rule 47 (unary_expr -> list_expr .)
    STRING2         reduce using rule 47 (unary_expr -> list_expr .)
    LSBRACKET       reduce using rule 47 (unary_expr -> list_expr .)
    SELECTOR        reduce using rule 47 (unary_expr -> list_expr .)
    LPAREN          reduce using rule 47 (unary_expr -> list_expr .)
    $end            reduce using rule 47 (unary_expr -> list_expr .)
    COMMA           reduce using rule 47 (unary_expr -> list_expr .)
    RSBRACKET       reduce using rule 47 (unary_expr -> list_expr .)
    DO              reduce using rule 47 (unary_expr -> list_expr .)
    END             reduce using rule 47 (unary_expr -> list_expr .)
    ELIF            reduce using rule 47 (unary_expr -> list_expr .)
    ELSE            reduce using rule 47 (unary_expr -> list_expr .)
    RPAREN          reduce using rule 47 (unary_expr -> list_expr .)
    SEMICOLON       reduce using rule 47 (unary_expr -> list_expr .)
    RCBRACKET       reduce using rule 47 (unary_expr -> list_expr .)


state 2

    (1) start -> statements .

    $end            reduce using rule 1 (start -> statements .)


state 3

    (40) expression -> unary_expr .

    PLUS            reduce using rule 40 (expression -> unary_expr .)
    MINUS           reduce using rule 40 (expression -> unary_expr .)
    MULTIPLY        reduce using rule 40 (expression -> unary_expr .)
    DIVIDE          reduce using rule 40 (expression -> unary_expr .)
    POW             reduce using rule 40 (expression -> unary_expr .)
    MOD             reduce using rule 40 (expression -> unary_expr .)
    AND             reduce using rule 40 (expression -> unary_expr .)
    OR              reduce using rule 40 (expression -> unary_expr .)
    XOR             reduce using rule 40 (expression -> unary_expr .)
    EQUALS          reduce using rule 40 (expression -> unary_expr .)
    NOT_EQUALS      reduce using rule 40 (expression -> unary_expr .)
    GREATER_THAN    reduce using rule 40 (expression -> unary_expr .)
    LESS_THAN       reduce using rule 40 (expression -> unary_expr .)
    GREATER_THAN_OR_EQUAL reduce using rule 40 (expression -> unary_expr .)
    LESS_THAN_OR_EQUAL reduce using rule 40 (expression -> unary_expr .)
    ID              reduce using rule 40 (expression -> unary_expr .)
    IF              reduce using rule 40 (expression -> unary_expr .)
    WHILE           reduce using rule 40 (expression -> unary_expr .)
    FOR             reduce using rule 40 (expression -> unary_expr .)
    TRUE            reduce using rule 40 (expression -> unary_expr .)
    FALSE           reduce using rule 40 (expression -> unary_expr .)
    NOT             reduce using rule 40 (expression -> unary_expr .)
    NUMBER          reduce using rule 40 (expression -> unary_expr .)
    STRING1         reduce using rule 40 (expression -> unary_expr .)
    STRING2         reduce using rule 40 (expression -> unary_expr .)
    LSBRACKET       reduce using rule 40 (expression -> unary_expr .)
    SELECTOR        reduce using rule 40 (expression -> unary_expr .)
    LPAREN          reduce using rule 40 (expression -> unary_expr .)
    $end            reduce using rule 40 (expression -> unary_expr .)
    COMMA           reduce using rule 40 (expression -> unary_expr .)
    RSBRACKET       reduce using rule 40 (expression -> unary_expr .)
    DO              reduce using rule 40 (expression -> unary_expr .)
    END             reduce using rule 40 (expression -> unary_expr .)
    ELIF            reduce using rule 40 (expression -> unary_expr .)
    ELSE            reduce using rule 40 (expression -> unary_expr .)
    RPAREN          reduce using rule 40 (expression -> unary_expr .)
    SEMICOLON       reduce using rule 40 (expression -> unary_expr .)
    RCBRACKET       reduce using rule 40 (expression -> unary_expr .)


state 4

    (61) list_expr -> LSBRACKET . elements RSBRACKET
    (21) elements -> . element COMMA elements
    (22) elements -> . element
    (23) element -> . expression
    (40) expression -> . unary_expr
    (41) expression -> . binary_expr
    (42) unary_expr -> . boolean_expr
    (43) unary_expr -> . not_expr
    (44) unary_expr -> . number_expr
    (45) unary_expr -> . id_expr
    (46) unary_expr -> . string_expr
    (47) unary_expr -> . list_expr
    (48) unary_expr -> . parse_text_expr
    (49) unary_expr -> . group_expr
    (50) unary_expr -> . uplus_expr
    (51) unary_expr -> . uminus_expr
    (52) binary_expr -> . arithmetic_expr
    (53) binary_expr -> . conditional_expr
    (54) boolean_expr -> . TRUE
    (55) boolean_expr -> . FALSE
    (56) not_expr -> . NOT expression
    (57) number_expr -> . NUMBER
    (58) id_expr -> . ID
    (59) string_expr -> . STRING1
    (60) string_expr -> . STRING2
    (61) list_expr -> . LSBRACKET elements RSBRACKET
    (62) parse_text_expr -> . SELECTOR LPAREN elements RPAREN
    (63) group_expr -> . LPAREN expression RPAREN
    (64) uplus_expr -> . PLUS expression
    (65) uminus_expr -> . MINUS expression
    (66) arithmetic_expr -> . expression PLUS expression
    (67) arithmetic_expr -> . expression MINUS expression
    (68) arithmetic_expr -> . expression MULTIPLY expression
    (69) arithmetic_expr -> . expression DIVIDE expression
    (70) arithmetic_expr -> . expression POW expression
    (71) arithmetic_expr -> . expression MOD expression
    (72) conditional_expr -> . expression AND expression
    (73) conditional_expr -> . expression OR expression
    (74) conditional_expr -> . expression XOR expression
    (75) conditional_expr -> . expression EQUALS expression
    (76) conditional_expr -> . expression NOT_EQUALS expression
    (77) conditional_expr -> . expression GREATER_THAN expression
    (78) conditional_expr -> . expression LESS_THAN expression
    (79) conditional_expr -> . expression GREATER_THAN_OR_EQUAL expression
    (80) conditional_expr -> . expression LESS_THAN_OR_EQUAL expression

    TRUE            shift and go to state 12
    FALSE           shift and go to state 35
    NOT             shift and go to state 42
    NUMBER          shift and go to state 7
    ID              shift and go to state 47
    STRING1         shift and go to state 23
    STRING2         shift and go to state 22
    LSBRACKET       shift and go to state 4
    SELECTOR        shift and go to state 8
    LPAREN          shift and go to state 30
    PLUS            shift and go to state 21
    MINUS           shift and go to state 13

    conditional_expr               shift and go to state 28
    elements                       shift and go to state 46
    number_expr                    shift and go to state 31
    string_expr                    shift and go to state 15
    unary_expr                     shift and go to state 3
    uminus_expr                    shift and go to state 37
    id_expr                        shift and go to state 38
    group_expr                     shift and go to state 24
    element                        shift and go to state 48
    arithmetic_expr                shift and go to state 16
    boolean_expr                   shift and go to state 39
    list_expr                      shift and go to state 1
    not_expr                       shift and go to state 6
    binary_expr                    shift and go to state 9
    parse_text_expr                shift and go to state 11
    uplus_expr                     shift and go to state 43
    expression                     shift and go to state 49

state 5

    (11) simple_stmt -> dictionary_stmt .

    ID              reduce using rule 11 (simple_stmt -> dictionary_stmt .)
    IF              reduce using rule 11 (simple_stmt -> dictionary_stmt .)
    WHILE           reduce using rule 11 (simple_stmt -> dictionary_stmt .)
    FOR             reduce using rule 11 (simple_stmt -> dictionary_stmt .)
    TRUE            reduce using rule 11 (simple_stmt -> dictionary_stmt .)
    FALSE           reduce using rule 11 (simple_stmt -> dictionary_stmt .)
    NOT             reduce using rule 11 (simple_stmt -> dictionary_stmt .)
    NUMBER          reduce using rule 11 (simple_stmt -> dictionary_stmt .)
    STRING1         reduce using rule 11 (simple_stmt -> dictionary_stmt .)
    STRING2         reduce using rule 11 (simple_stmt -> dictionary_stmt .)
    LSBRACKET       reduce using rule 11 (simple_stmt -> dictionary_stmt .)
    SELECTOR        reduce using rule 11 (simple_stmt -> dictionary_stmt .)
    LPAREN          reduce using rule 11 (simple_stmt -> dictionary_stmt .)
    PLUS            reduce using rule 11 (simple_stmt -> dictionary_stmt .)
    MINUS           reduce using rule 11 (simple_stmt -> dictionary_stmt .)
    END             reduce using rule 11 (simple_stmt -> dictionary_stmt .)
    RPAREN          reduce using rule 11 (simple_stmt -> dictionary_stmt .)
    $end            reduce using rule 11 (simple_stmt -> dictionary_stmt .)
    ELIF            reduce using rule 11 (simple_stmt -> dictionary_stmt .)
    ELSE            reduce using rule 11 (simple_stmt -> dictionary_stmt .)


state 6

    (43) unary_expr -> not_expr .

    PLUS            reduce using rule 43 (unary_expr -> not_expr .)
    MINUS           reduce using rule 43 (unary_expr -> not_expr .)
    MULTIPLY        reduce using rule 43 (unary_expr -> not_expr .)
    DIVIDE          reduce using rule 43 (unary_expr -> not_expr .)
    POW             reduce using rule 43 (unary_expr -> not_expr .)
    MOD             reduce using rule 43 (unary_expr -> not_expr .)
    AND             reduce using rule 43 (unary_expr -> not_expr .)
    OR              reduce using rule 43 (unary_expr -> not_expr .)
    XOR             reduce using rule 43 (unary_expr -> not_expr .)
    EQUALS          reduce using rule 43 (unary_expr -> not_expr .)
    NOT_EQUALS      reduce using rule 43 (unary_expr -> not_expr .)
    GREATER_THAN    reduce using rule 43 (unary_expr -> not_expr .)
    LESS_THAN       reduce using rule 43 (unary_expr -> not_expr .)
    GREATER_THAN_OR_EQUAL reduce using rule 43 (unary_expr -> not_expr .)
    LESS_THAN_OR_EQUAL reduce using rule 43 (unary_expr -> not_expr .)
    ID              reduce using rule 43 (unary_expr -> not_expr .)
    IF              reduce using rule 43 (unary_expr -> not_expr .)
    WHILE           reduce using rule 43 (unary_expr -> not_expr .)
    FOR             reduce using rule 43 (unary_expr -> not_expr .)
    TRUE            reduce using rule 43 (unary_expr -> not_expr .)
    FALSE           reduce using rule 43 (unary_expr -> not_expr .)
    NOT             reduce using rule 43 (unary_expr -> not_expr .)
    NUMBER          reduce using rule 43 (unary_expr -> not_expr .)
    STRING1         reduce using rule 43 (unary_expr -> not_expr .)
    STRING2         reduce using rule 43 (unary_expr -> not_expr .)
    LSBRACKET       reduce using rule 43 (unary_expr -> not_expr .)
    SELECTOR        reduce using rule 43 (unary_expr -> not_expr .)
    LPAREN          reduce using rule 43 (unary_expr -> not_expr .)
    $end            reduce using rule 43 (unary_expr -> not_expr .)
    COMMA           reduce using rule 43 (unary_expr -> not_expr .)
    RSBRACKET       reduce using rule 43 (unary_expr -> not_expr .)
    DO              reduce using rule 43 (unary_expr -> not_expr .)
    END             reduce using rule 43 (unary_expr -> not_expr .)
    ELIF            reduce using rule 43 (unary_expr -> not_expr .)
    ELSE            reduce using rule 43 (unary_expr -> not_expr .)
    RPAREN          reduce using rule 43 (unary_expr -> not_expr .)
    SEMICOLON       reduce using rule 43 (unary_expr -> not_expr .)
    RCBRACKET       reduce using rule 43 (unary_expr -> not_expr .)


state 7

    (57) number_expr -> NUMBER .

    PLUS            reduce using rule 57 (number_expr -> NUMBER .)
    MINUS           reduce using rule 57 (number_expr -> NUMBER .)
    MULTIPLY        reduce using rule 57 (number_expr -> NUMBER .)
    DIVIDE          reduce using rule 57 (number_expr -> NUMBER .)
    POW             reduce using rule 57 (number_expr -> NUMBER .)
    MOD             reduce using rule 57 (number_expr -> NUMBER .)
    AND             reduce using rule 57 (number_expr -> NUMBER .)
    OR              reduce using rule 57 (number_expr -> NUMBER .)
    XOR             reduce using rule 57 (number_expr -> NUMBER .)
    EQUALS          reduce using rule 57 (number_expr -> NUMBER .)
    NOT_EQUALS      reduce using rule 57 (number_expr -> NUMBER .)
    GREATER_THAN    reduce using rule 57 (number_expr -> NUMBER .)
    LESS_THAN       reduce using rule 57 (number_expr -> NUMBER .)
    GREATER_THAN_OR_EQUAL reduce using rule 57 (number_expr -> NUMBER .)
    LESS_THAN_OR_EQUAL reduce using rule 57 (number_expr -> NUMBER .)
    COMMA           reduce using rule 57 (number_expr -> NUMBER .)
    RSBRACKET       reduce using rule 57 (number_expr -> NUMBER .)
    DO              reduce using rule 57 (number_expr -> NUMBER .)
    ID              reduce using rule 57 (number_expr -> NUMBER .)
    IF              reduce using rule 57 (number_expr -> NUMBER .)
    WHILE           reduce using rule 57 (number_expr -> NUMBER .)
    FOR             reduce using rule 57 (number_expr -> NUMBER .)
    TRUE            reduce using rule 57 (number_expr -> NUMBER .)
    FALSE           reduce using rule 57 (number_expr -> NUMBER .)
    NOT             reduce using rule 57 (number_expr -> NUMBER .)
    NUMBER          reduce using rule 57 (number_expr -> NUMBER .)
    STRING1         reduce using rule 57 (number_expr -> NUMBER .)
    STRING2         reduce using rule 57 (number_expr -> NUMBER .)
    LSBRACKET       reduce using rule 57 (number_expr -> NUMBER .)
    SELECTOR        reduce using rule 57 (number_expr -> NUMBER .)
    LPAREN          reduce using rule 57 (number_expr -> NUMBER .)
    $end            reduce using rule 57 (number_expr -> NUMBER .)
    END             reduce using rule 57 (number_expr -> NUMBER .)
    ELIF            reduce using rule 57 (number_expr -> NUMBER .)
    ELSE            reduce using rule 57 (number_expr -> NUMBER .)
    RPAREN          reduce using rule 57 (number_expr -> NUMBER .)
    SEMICOLON       reduce using rule 57 (number_expr -> NUMBER .)
    RCBRACKET       reduce using rule 57 (number_expr -> NUMBER .)


state 8

    (62) parse_text_expr -> SELECTOR . LPAREN elements RPAREN

    LPAREN          shift and go to state 50


state 9

    (41) expression -> binary_expr .

    PLUS            reduce using rule 41 (expression -> binary_expr .)
    MINUS           reduce using rule 41 (expression -> binary_expr .)
    MULTIPLY        reduce using rule 41 (expression -> binary_expr .)
    DIVIDE          reduce using rule 41 (expression -> binary_expr .)
    POW             reduce using rule 41 (expression -> binary_expr .)
    MOD             reduce using rule 41 (expression -> binary_expr .)
    AND             reduce using rule 41 (expression -> binary_expr .)
    OR              reduce using rule 41 (expression -> binary_expr .)
    XOR             reduce using rule 41 (expression -> binary_expr .)
    EQUALS          reduce using rule 41 (expression -> binary_expr .)
    NOT_EQUALS      reduce using rule 41 (expression -> binary_expr .)
    GREATER_THAN    reduce using rule 41 (expression -> binary_expr .)
    LESS_THAN       reduce using rule 41 (expression -> binary_expr .)
    GREATER_THAN_OR_EQUAL reduce using rule 41 (expression -> binary_expr .)
    LESS_THAN_OR_EQUAL reduce using rule 41 (expression -> binary_expr .)
    ID              reduce using rule 41 (expression -> binary_expr .)
    IF              reduce using rule 41 (expression -> binary_expr .)
    WHILE           reduce using rule 41 (expression -> binary_expr .)
    FOR             reduce using rule 41 (expression -> binary_expr .)
    TRUE            reduce using rule 41 (expression -> binary_expr .)
    FALSE           reduce using rule 41 (expression -> binary_expr .)
    NOT             reduce using rule 41 (expression -> binary_expr .)
    NUMBER          reduce using rule 41 (expression -> binary_expr .)
    STRING1         reduce using rule 41 (expression -> binary_expr .)
    STRING2         reduce using rule 41 (expression -> binary_expr .)
    LSBRACKET       reduce using rule 41 (expression -> binary_expr .)
    SELECTOR        reduce using rule 41 (expression -> binary_expr .)
    LPAREN          reduce using rule 41 (expression -> binary_expr .)
    $end            reduce using rule 41 (expression -> binary_expr .)
    COMMA           reduce using rule 41 (expression -> binary_expr .)
    RSBRACKET       reduce using rule 41 (expression -> binary_expr .)
    DO              reduce using rule 41 (expression -> binary_expr .)
    END             reduce using rule 41 (expression -> binary_expr .)
    ELIF            reduce using rule 41 (expression -> binary_expr .)
    ELSE            reduce using rule 41 (expression -> binary_expr .)
    RPAREN          reduce using rule 41 (expression -> binary_expr .)
    SEMICOLON       reduce using rule 41 (expression -> binary_expr .)
    RCBRACKET       reduce using rule 41 (expression -> binary_expr .)


state 10

    (37) while_stmt -> WHILE . expression DO statements END
    (40) expression -> . unary_expr
    (41) expression -> . binary_expr
    (42) unary_expr -> . boolean_expr
    (43) unary_expr -> . not_expr
    (44) unary_expr -> . number_expr
    (45) unary_expr -> . id_expr
    (46) unary_expr -> . string_expr
    (47) unary_expr -> . list_expr
    (48) unary_expr -> . parse_text_expr
    (49) unary_expr -> . group_expr
    (50) unary_expr -> . uplus_expr
    (51) unary_expr -> . uminus_expr
    (52) binary_expr -> . arithmetic_expr
    (53) binary_expr -> . conditional_expr
    (54) boolean_expr -> . TRUE
    (55) boolean_expr -> . FALSE
    (56) not_expr -> . NOT expression
    (57) number_expr -> . NUMBER
    (58) id_expr -> . ID
    (59) string_expr -> . STRING1
    (60) string_expr -> . STRING2
    (61) list_expr -> . LSBRACKET elements RSBRACKET
    (62) parse_text_expr -> . SELECTOR LPAREN elements RPAREN
    (63) group_expr -> . LPAREN expression RPAREN
    (64) uplus_expr -> . PLUS expression
    (65) uminus_expr -> . MINUS expression
    (66) arithmetic_expr -> . expression PLUS expression
    (67) arithmetic_expr -> . expression MINUS expression
    (68) arithmetic_expr -> . expression MULTIPLY expression
    (69) arithmetic_expr -> . expression DIVIDE expression
    (70) arithmetic_expr -> . expression POW expression
    (71) arithmetic_expr -> . expression MOD expression
    (72) conditional_expr -> . expression AND expression
    (73) conditional_expr -> . expression OR expression
    (74) conditional_expr -> . expression XOR expression
    (75) conditional_expr -> . expression EQUALS expression
    (76) conditional_expr -> . expression NOT_EQUALS expression
    (77) conditional_expr -> . expression GREATER_THAN expression
    (78) conditional_expr -> . expression LESS_THAN expression
    (79) conditional_expr -> . expression GREATER_THAN_OR_EQUAL expression
    (80) conditional_expr -> . expression LESS_THAN_OR_EQUAL expression

    TRUE            shift and go to state 12
    FALSE           shift and go to state 35
    NOT             shift and go to state 42
    NUMBER          shift and go to state 7
    ID              shift and go to state 47
    STRING1         shift and go to state 23
    STRING2         shift and go to state 22
    LSBRACKET       shift and go to state 4
    SELECTOR        shift and go to state 8
    LPAREN          shift and go to state 30
    PLUS            shift and go to state 21
    MINUS           shift and go to state 13

    conditional_expr               shift and go to state 28
    list_expr                      shift and go to state 1
    string_expr                    shift and go to state 15
    unary_expr                     shift and go to state 3
    uminus_expr                    shift and go to state 37
    id_expr                        shift and go to state 38
    group_expr                     shift and go to state 24
    arithmetic_expr                shift and go to state 16
    boolean_expr                   shift and go to state 39
    not_expr                       shift and go to state 6
    binary_expr                    shift and go to state 9
    number_expr                    shift and go to state 31
    parse_text_expr                shift and go to state 11
    uplus_expr                     shift and go to state 43
    expression                     shift and go to state 51

state 11

    (48) unary_expr -> parse_text_expr .

